# OpenCv-second-example

./: CMakeLists.txt  LICENSE  README.md  capturaEstereo.cpp
